--- a/src/app/popUps/create-account/create-account.component.html
+++ b/src/app/popUps/create-account/create-account.component.html
@@ -1,6 +1,6 @@
 <div class="flex center-center column">
     <h1 class="text-center colorBlu">Create an Account</h1>
-    <form [formGroup]="accountForm" class="flex full-width column padding-12">
+    <form [formGroup]="accountForm" class="flex full-width column">
 
         <mat-form-field class="full-width">
             <mat-label>Full Name</mat-label>
