--- a/src/app/dashboards/borrower/borrower.component.html
+++ b/src/app/dashboards/borrower/borrower.component.html
@@ -7,11 +7,11 @@
             <p ><b>Iitial Amount</b></p>
             <p ><b class="color-blu">{{'R'+loanAmount}}</b></p>
         </mat-card>
-        <mat-card matBadgeSize="large" class="card flex center-center" (click)="makePayment()"><b>Make A
+        <mat-card  matBadgeSize="large" class="card flex center-center" (click)="makePayment()"><b>Make A
                 Payment</b></mat-card>
         <mat-card matBadgeSize="large" class="card flex center-center">
             <p><b>Remaining Balance</b></p>
-            <p class="color-blu"><b>{{"R"+balance}}</b></p>
+            <p class="color-blu"><b>{{"R"+remainingBalance}}</b></p>
         </mat-card>
     </div>
     <div class="payment-container full-width">
