--- a/src/app/enquire/enquire.component.html
+++ b/src/app/enquire/enquire.component.html
@@ -43,8 +43,8 @@
             <mat-label>Leave a Message</mat-label>
             <textarea [readonly]="_data" matInput placeholder="Ex. It makes me feel..." formControlName="messageArea"></textarea>
         </mat-form-field>
-        Reply
-        <mat-form-field class="example-full-width no-margin full-width half-height">
+        
+        <mat-form-field class="example-full-width no-margin full-width half-height" *ngIf="_data">
             <mat-label>Reply</mat-label>
             <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
         </mat-form-field>
