--- a/src/app/popUps/payment/payment.component.html
+++ b/src/app/popUps/payment/payment.component.html
@@ -17,7 +17,7 @@
         <div class="flex gap-1em end-center m-b-1em">
             <button mat-raised-button type="button" class="btn flex-1 red" (click)="paymentForm.reset()">Cancel</button>
             <button mat-raised-button type="button" class="btn flex-1 blu"
-               (click)="submit()" >Pay</button>
+               (click)="submit()" [disabled]="status">Pay</button>
         </div>
     </form>
 </div>
