--- a/src/app/loan-policy/loan-policy.component.html
+++ b/src/app/loan-policy/loan-policy.component.html
@@ -22,7 +22,7 @@
     <mat-card class="card">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Vihicle Loan Policy</mat-card-title>
+            <mat-card-title>Vehicle Loan Policy</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <p>
