--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -78,7 +78,7 @@ button {
     width: 70%;
 }
 
-.colorBlue {
+.color-blue {
     background-color: #121a2e !important;
     color: #fefefe !important;
 }
