--- a/src/app/charts/progress-bar/progress-bar.component.html
+++ b/src/app/charts/progress-bar/progress-bar.component.html
@@ -1,5 +1,5 @@
 <circle-progress
-  [percent]="70"
+  [percent]= "creditScore"
   [radius]="100"
   [outerStrokeWidth]="16"
   [innerStrokeWidth]="8"
