--- a/src/app/enquire/enquire.component.html
+++ b/src/app/enquire/enquire.component.html
@@ -43,11 +43,11 @@
             <mat-label>Leave a Message</mat-label>
             <textarea [readonly]="_data" matInput placeholder="Ex. It makes me feel..." formControlName="messageArea"></textarea>
         </mat-form-field>
-        Reply
-        <mat-form-field class="example-full-width no-margin full-width half-height">
+        <!-- Reply -->
+        <!-- <mat-form-field class="example-full-width no-margin full-width half-height">
             <mat-label>Reply</mat-label>
             <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
-        </mat-form-field>
+        </mat-form-field> -->
 
         <div class="width-80 flex gap-1em">
             <button class="btn-0" mat-raised-button (click)="close()">{{_data?'Close':'Cancel'}}</button>
