--- a/src/app/popUps/create-account/create-account.component.scss
+++ b/src/app/popUps/create-account/create-account.component.scss
@@ -15,3 +15,17 @@ form {
 .colorBlu{
     color: #121a2e;
 }
+.relative{
+    position: relative;
+}
+.absolute{
+    position: absolute;
+}
+.close {
+    top: 3px;
+    right: 3px;
+    color: white;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color: #cd2e37;
+  }
