--- a/src/app/popup/log-in/log-in.component.scss
+++ b/src/app/popup/log-in/log-in.component.scss
@@ -3,17 +3,16 @@ $blue: #121a2e;
 $red: #cd2e37;
 $white: #efefef;
 
-
-
-.bg{
+.bg {
   background-color: #efefef;
 }
 
 .mdc-text-field:not(.mdc-text-field--disabled) .mdc-floating-label {
   color: #121a2e;
 }
-.m-b-1em{
-    margin-bottom: 1em;
+
+.m-b-1em {
+  margin-bottom: 1em;
 }
 
 
@@ -27,90 +26,127 @@ $white: #efefef;
 }
 
 .mat-mdc-raised-button.mat-unthemed {
-  --mdc-protected-button-container-color:#121a2e ;
+  --mdc-protected-button-container-color: #121a2e;
   --mdc-protected-button-label-text-color: #efefef;
 }
-.color-blue{
+
+.color-blue {
   color: #121a2e;
 }
-.max-height{
+
+.max-height {
   max-height: 100px;
 }
-.color-b{
-    color: #121a2e;
-    
-  }
-  
+
+.color-b {
+  color: #121a2e;
+
+}
+
 
 .mdc-text-field:not(.mdc-text-field--disabled) .mdc-floating-label {
-    color: #121a2e;
-  }
-  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    background-color: #efefef;
-  }
-.padding-1em{
-    padding: 1em;
-    box-sizing: border-box;
+  color: #121a2e;
 }
-.pading-6{
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: #efefef;
+}
+
+.padding-1em {
+  padding: 1em;
+  box-sizing: border-box;
+}
+
+.pading-6 {
   padding: 6px;
   box-sizing: border-box;
 }
 
-.width-40{
-    width: 90%;
+.width-40 {
+  width: 90%;
 }
 
-.width-80{
-    width: 90%;
+.width-80 {
+  width: 90%;
 }
-.no-margin{
-  margin:0 ;
+
+.no-margin {
+  margin: 0;
 }
-.text-center{
+
+.text-center {
   text-align: center;
 }
-.height-30{
+
+.height-30 {
   height: 30px;
 }
-.mat-mdc-text-field-wrapper{
+
+.mat-mdc-text-field-wrapper {
   height: 40px;
 }
+
 // .height-50{
 //   height: 50px;
 // }
-.sign{
+.sign {
   width: 47%;
   border: 2px solid #c2b7b7;
   background-color: #ffffff;
   border-radius: 10px;
   height: 56px;
 }
-.sign:hover{
+
+.sign:hover {
   width: 47%;
   border: 3px dotted rgb(146, 143, 143);
   border-radius: 10px;
   background-color: #c2b7b7;
   cursor: pointer;
 }
-.height-480{
+
+.height-480 {
   height: 480px;
 }
-.no-overflow{
+
+.no-overflow {
   overflow-y: hidden;
 }
-.gap-2em{
+
+.gap-2em {
   gap: 2em;
 }
-.width-400{
+
+.width-400 {
   width: 450px;
 }
-.width-350{
+
+.width-350 {
   width: 350px;
 }
-.btn{
+
+.btn {
   width: 230px;
 }
-.inline{
+
+.inline {
   display: inline;
+}
+
+.close {
+  top: 3px;
+  right: 3px;
+  color: white;
+  border-radius: 5px;
+  border: 2px solid black;
+  background-color: #cd2e37;
+  z-index: 1;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
 }
