--- a/src/app/tables/loan-officer-table/loan-officer-table.component.html
+++ b/src/app/tables/loan-officer-table/loan-officer-table.component.html
@@ -1,8 +1,8 @@
-<mat-form-field>
+<!-- <mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-</mat-form-field>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+</mat-form-field> -->
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 margin-top">
 
   <!--ID Column -->
   <ng-container matColumnDef="fullName">
@@ -60,9 +60,9 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   <!-- Row shown when there is no matching data. -->
-  <tr class="mat-row" *matNoDataRow>
+  <!-- <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
   </tr>
-</table>
-<mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page">
-</mat-paginator>
+</table> -->
+<!-- <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page">
+</mat-paginator> -->
