--- a/src/app/popUps/payment/payment.component.html
+++ b/src/app/popUps/payment/payment.component.html
@@ -1,5 +1,5 @@
 <div class="flex center-center column relative">
-    <mat-icon (click)="close()" class="close absolute">close</mat-icon>
+    <mat-icon (click)="close()" class="close absolute" >close</mat-icon>
     <h1 class="text-center color-blue">Make A Payment</h1>
     <form [formGroup]="paymentForm" class="flex full-width column padding-12">
         <!-- Initial Amount -->
@@ -11,13 +11,13 @@
         <!-- Monthly Repayment -->
         <h4 class="no-margin">Monthly Repayments</h4>
         <mat-form-field>
-            <input type="number" matInput formControlName="monthlyRepayment" placeholder="R">
+            <input type="number" matInput formControlName="monthlyRepayment" placeholder="R" [readonly]="!status">
         </mat-form-field>
 
         <div class="flex gap-1em end-center m-b-1em">
             <button mat-raised-button type="button" class="btn flex-1 red" (click)="paymentForm.reset()">Cancel</button>
             <button mat-raised-button type="button" class="btn flex-1 blu"
-               (click)="submit()">Pay</button>
+               (click)="submit()" [disabled]="!status">Pay</button>
         </div>
     </form>
 </div>
