--- a/src/app/tables/borrower-table/borrower-table.component.html
+++ b/src/app/tables/borrower-table/borrower-table.component.html
@@ -4,7 +4,7 @@
         <!--ID Column -->
         <ng-container matColumnDef="loanType">
             <th mat-header-cell *matHeaderCellDef> Loan Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.loanType}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.loanType | titlecase}} </td>
         </ng-container>
 
         <!-- Name Column -->
@@ -16,7 +16,7 @@
         <!-- Name Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{color: element.loanStatutus === 'Pending' ? 'orange' : element.loanStatutus === 'approved' ? 'green' :  'red' } "> {{element.loanStatutus}} </td>
+            <td mat-cell *matCellDef="let element" [ngStyle]="{color: element.loanStatutus === 'Pending' ? 'orange' : element.loanStatutus === 'approved' ? 'green' :  'red' } "> {{element.loanStatutus | titlecase}} </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
