--- a/src/app/tables/loan-officer-table/loan-officer-table.component.html
+++ b/src/app/tables/loan-officer-table/loan-officer-table.component.html
@@ -32,15 +32,21 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
       <td mat-cell *matCellDef="let element">
-        <button class="half-width" mat-raised-button [disabled]="element.status === 'declined'"
-          [color]="element.loanStatutus === 'pending' ? 'warn':element.loanStatutus === 'declined' ? 'accent': 'primary'"
+        <button class="half-width state" mat-raised-button [disabled]="element.loanStatutus == 'declined'"
+          [color]="element.loanStatutus == 'Pending' ? 'primary':element.loanStatutus == 'Declined' ? 'ward': 'accent'"
           [matMenuTriggerFor]="menu">{{element.loanStatutus | titlecase}}</button>
         <mat-menu #menu="matMenu">
-          <button *ngFor="let option of applicationAction" (click)="updateStatus(element,option)"
+          <button  *ngFor="let option of applicationAction" (click)="updateStatus(element,option)"
             mat-menu-item>{{option | titlecase}}</button>
         </mat-menu>
       </td>
     </ng-container>
+
+    <!-- Documents Column -->
+    <ng-container matColumnDef="documents">
+      <th mat-header-cell *matHeaderCellDef> Documents </th>
+      <td mat-cell *matCellDef="let element"><a   [href]="element.profileImage">view document</a></td>
+    </ng-container> 
 
     <!-- Options Column -->
     <ng-container matColumnDef="options">
@@ -50,19 +56,13 @@
       </td>
     </ng-container>
 
-    <!-- Documents Column -->
-    <ng-container matColumnDef="documents">
-      <th mat-header-cell *matHeaderCellDef> Documents </th>
-      <td mat-cell *matCellDef="let element"><a   [href]="element.profileImage">view document</a></td>
-    </ng-container> 
-
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   <!-- Row shown when there is no matching data. -->
   <!-- <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-  </tr>
-</table> -->
+  </tr> -->
+</table>
 <!-- <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page">
 </mat-paginator> -->
