--- a/src/app/tables/messages-table/messages-table.component.html
+++ b/src/app/tables/messages-table/messages-table.component.html
@@ -5,7 +5,7 @@
         <!--ID Column -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.fullName}} </td>
         </ng-container>
 
         <!-- Name Column -->
